static/css/style.css
/* ... */
#cake-header {
    /*position: absolute;*/
    transform: translate(0, -420px);
    color: white;
    font-size: 70px;
    text-shadow: 2px 2px 9px #000000;
}

.previous {
    border-radius: 50%;
    background-color: #f1f1f1;
    color: black;
    text-decoration: none;
    padding: 16px 32px;
    margin-left: 5%;
    position: absolute;
    transform: translate(0, 350px);
    z-index: 1;
}

.previous:hover { /*button changes color when hovering over it*/
    background-color: #d8d8d8;
    transition-duration: 0.4s;
}

.next {
    border-radius: 50%;
    background-color: #f1f1f1;
    color: black;
    text-decoration: none;
    padding: 16px 32px;
    margin-left: 90%;
    position: absolute;
    transform: translate(0, 350px);
    display: inline-block;
    z-index: 1;
}

.next:hover { /*button changes color when hovering over it*/
    background-color: #d8d8d8;
    transition-duration: 1s;
}

#cake-description {
    text-align: center;
    font-size: 25px;
    padding-left: 4%;
    padding-right: 4%;
    padding-top: 3%;
    padding-bottom: 3%;
    /*background-color: #fff2e4;*/
    background-color: #fff0f0;
    margin-bottom: 4%;
    margin-left: 10%;
    margin-right: 10%;
}

#ingredient-box {
    background-color: #ff95a4;
    padding: 2%; /*padding between outer box and border*/
    margin-bottom: 8%;
    margin-right: 10%;
    margin-left: 10%;
    color: white;
}

#ingredient-content {
    border-style: solid;
    border-color: white;
    border-width: 5px;
    padding-top: 2%;
    padding-bottom: 2%; /*padding between border and content*/
}

#ingredient-header {
    font-size: 40px;
    text-align: center;
}

#ingredient-list {
    display: grid;
    grid-template-columns: auto auto; /*grid has two columns*/
    grid-gap: 20px 20px;
    font-size: 25px;
    padding: 40px;
    padding-left: 20%;
    padding-right: 20%;
}

.banner-image img{
    object-fit: cover;
    height: 150px;
    width: 98%;
    padding-top: 1.5%;
}

.about-section {
    margin-top: 25px;
    margin-bottom: 25px;
    min-height: 500px;
    /*background-color: #fff2e4;*/
    background-color: #fff0f0;
    padding-left: 2%;
    margin-right: 2%;
    text-align: center;
}

.about-left img {
    object-fit: cover;
    height: 400px;
    width: 40%;
    padding-top: 2%;
    padding-bottom: 2%;
    padding-right: 5%;
    padding-left: 3%;
    float: left; /*keeps the image to the left*/
}

.about-right img {
    object-fit: cover;
    height: 400px;
    width: 40%;
    padding-top: 2%;
    padding-bottom: 2%;
    padding-right: 2%;
    padding-left: 6%;
    float: right; /*keeps the image to the right*/
}

.span-image img{
    object-fit: cover;
    height: 200px;
    width: 98%;
    padding-top: 2%;
    padding-bottom: 2%;
}

.head-title {
    transform: translate(0, -130px);
    text-align: center;
    position: absolute;
    /*setting left, right to zero & margins to auto, centers the element*/
    left: 0;
    right: 0;
    margin-left:auto;
    margin-right:auto;
    color: white;
    font-size: 70px;
    text-shadow: 2px 2px 9px #000000;
}

.about-text {
    padding-top: 3%;
    padding-bottom: 3%;
    padding-right: 6%;
    padding-left: 3%;
    font-size: 25px;
}

.post-button { /*this section and the 2 below makes the link look like a button*/
    background-color: #f84d64;
    color: white;
    font-size: 25px;
    text-decoration: none;
    display: inline-block;
    border: none;
    border-radius: 5px; /*gives button a slightly rounded edge*/
    padding-left: 1.5%;
    padding-right: 1.5%;
    padding-top: 0.2%;
    padding-bottom: 0.2%;
    opacity: 70%;
    margin-left: 5%;
    margin-top: 2%;
    margin-bottom: 1%;
}

.post-button:hover { /*button becomes more opaque when hovering over it*/
    opacity: 1;
    transition: 0.5s; /*takes 0.5s for it to become fully opaque*/
}

input {
    font-family: 'Open Sans', sans-serif;
    width: 50%;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    background-position: 10px 10px; 
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
}

textarea {
    font-family: 'Open Sans', sans-serif;
    width: 50%;
    box-sizing: border-box;
    border: 2px solid #ccc;
    border-radius: 4px;
    font-size: 16px;
    background-color: white;
    background-position: 10px 10px; 
    background-repeat: no-repeat;
    padding: 12px 20px 12px 40px;
}

#topics {
    font-size: 50px;
    font-weight: 600;
    color: white;
    margin-bottom: 2%;
    text-align: center;
}

.board-header {
    font-size: 35px;
    font-weight: 500;
    text-decoration: none;
    color: white;
}

#board-box {
    background-color: #ff95a4;
    padding: 2%; /*padding between outer box and border*/
    margin-bottom: 8%;
    margin-right: 5%;
    margin-left: 5%;
    color: white;
    /*both lines under break up words which are too long so they don't overflow. Both do the same thing but good to have both in case*/ 
    overflow-wrap: break-word;
    word-wrap: break-word;
}

#board-content {
    border-style: solid;
    border-color: white;
    border-width: 5px;
    padding-top: 2%;
    padding-bottom: 2%; /*padding between border and content*/
}

#board-content a {
    text-decoration: none;
    color: white;
}

.post-wrapper {
    border-bottom-style: solid;
    border-color: white;
    margin-left: 3%;
    margin-right: 3%;
    padding-top: 1%;
    padding-bottom: 1%;
}

button { /*this section and the 2 below makes the link look like a button*/
    background-color: #f4364f;
    color: white;
    font-size: 25px;
    text-decoration: none;
    display: inline-block;
    border: none;
    border-radius: 5px; /*gives button a slightly rounded edge*/
    margin-top: 1%;
    margin-bottom: 2%;
    padding-left: 1%;
    padding-right: 1%;
    opacity: 70%;
}

button:hover { /*button becomes more opaque when hovering over it*/
    opacity: 1;
    transition: 0.5s;
}
/* ... */

